fix white space

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -127,6 +127,7 @@
 
       flex-direction: row ;
     }
+    
 
     .listContainer {
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
@@ -246,7 +247,7 @@
     display: flex !important;
     flex-direction: column ;
     font-size: 14px !important;
-    margin-top: 10px !important ;
+
     width: 100% !important;
     
   }
@@ -254,7 +255,7 @@
     display: flex !important;
     flex-direction: column ;
     font-size: 14px !important;
-    margin-top: 10px !important ; 
+
     width: auto;   
   }
    .navbar {
@@ -343,7 +344,7 @@
     display: flex !important;
     flex-direction: column !important;
     font-size: 14px !important;
-    margin-top: 10px !important;
+  
     width: 100% !important;
   }
   
@@ -351,7 +352,7 @@
     display: flex !important;
     flex-direction: column !important;
     font-size: 14px !important;
-    margin-top: 10px !important;
+  
     width: 100%;
   }
   
@@ -487,7 +488,6 @@
     display: flex !important;
     flex-direction: column !important;
     font-size: 14px !important;
-    margin-top: 10px !important;
     width: 100% !important;
   }
   
@@ -495,7 +495,6 @@
     display: flex !important;
     flex-direction: column !important;
     font-size: 14px !important;
-    margin-top: 10px !important;
     width: 100%;
   }
   
